# AviSynth-JincResize

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  JincResize.cpp  JincResize.rc  JincRessize.h  KernelRow_avx2.cpp  KernelRow_sse41.cpp  LICENSE  README.md  resize_plane_avx2.cpp  resize_plane_avx512.cpp  resize_plane_sse41.cpp
msvc/: JincResize.vcxproj  JincResize.vcxproj.filters
src/: JincResize.cpp  JincResize.h  JincResize.rc  JincRessize.h  KernelRow_avx2.cpp  KernelRow_avx512.cpp  KernelRow_sse41.cpp  resize_plane_avx2.cpp  resize_plane_avx512.cpp  resize_plane_sse41.cpp
